--- a/src/components/ReduxApp.css
+++ b/src/components/ReduxApp.css
@@ -1,12 +1,15 @@
+body{
+  min-width: 1000px;
+}
 .flexbox-center{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .form-table-width{
-  width: 800px;
-  min-width: 800px;
-  max-width: 800px;
+  width: 1000px;
+  min-width: 1000px;
+  max-width: 1000px;
 }
 .form-flex-line{
   display: flex;
@@ -19,7 +22,7 @@
   justify-content: flex-end;
 }
 .form-item{
-  width: 250px;
+  width: 310px;
 }
 .main-form label, .main-form input, .main-form select, .main-form button{
   display: block;
