Moving from alerts to text error messages
Alerts cause warnings in airbnb eslint

--- a/src/components/ReduxApp.css
+++ b/src/components/ReduxApp.css
@@ -37,3 +37,9 @@ body{
 .final-whitespace{
   min-height: 10px;
 }
+.error-message{
+  font-size: 2em;
+  font-weight: bold;
+  color: red;
+  text-align: center;
+}
